# state-machine

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
include/: statemachine.hpp
src/: statemachine.cpp
tests/: test_statemachine.cpp
